# speedup

./: .gitignore  Makefile  main.cpp  main_compute.cpp  main_x86.cpp  measure.py  meson.build  meson_options.txt  plot.py  readme.md  speedup.cpp  speedup.hpp  speedup_compute.cpp  speedup_compute.hpp  speedup_x86.cpp  speedup_x86.hpp
measurements/: i5_osx.json  i7_zesty.json  raspi.json  vs2017_i5.json
